--- a/build_uboot.htm
+++ b/build_uboot.htm
@@ -29,7 +29,7 @@
 
 <body>
 
-<p>If you arrived here by search engine, and just want to install a new uBoot on your device, please see <a href="/debian/uboot/">this page.</a></p>
+<p>If you arrived here by search engine, and just want to install a new uBoot on your device, please see <a href="/uboot/">this page.</a></p>
 
 <h2>Building uBoot for the Seagate Dockstar, GoFlex Net, and Pogoplug Pink</h2>
 
